<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:layout_above="@+id/ed1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/enter_otp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/ed1"
        android:hint="@string/num"/>
    <Button
        android:id="@+id/otp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_below="@+id/ed1"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:text="@string/verify_otp"/>
    <TextView
        android:id="@+id/otp_form_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_below="@id/otp_btn"
        android:text="@string/verified"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/otp_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_form_feedback"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>